fix cropped background on shows tab

--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ a {
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  min-height: 700px;
+  min-height: 100vh;
 }
 
 .gig {
@@ -184,15 +184,6 @@ a {
   padding: 10px 14px;
   text-decoration: none;
   border-radius: 4px;
-}
-
-@media (min-width: 800px) {
-  body {
-    transform: scale(1.2);
-    transform-origin: top center;
-    width: 700px;
-    margin: 0 auto;
-  }
 }
 
 @media (max-width: 570px) {
